tests/fixtures/invalid/pow_bool_bytes_float.py
# Cannot call pow() with Bool, Bytes, Float
x = pow(True, b"hello", 1.0)
